option('enable_dxgi',  type : 'boolean', value : false, description: 'Build DXGI (not needed for D3D9-only)')
option('enable_d3d8',  type : 'boolean', value : false, description: 'Build D3D8 (disabled for macOS D3D9-only port)')
option('enable_d3d9',  type : 'boolean', value : true,  description: 'Build D3D9')
option('enable_d3d10', type : 'boolean', value : false, description: 'Build D3D10 (disabled for macOS D3D9-only port)')
option('enable_d3d11', type : 'boolean', value : false, description: 'Build D3D11 (disabled for macOS D3D9-only port)')
option('build_id',     type : 'boolean', value : false)
option('native_sdl3',  type : 'feature', value : 'auto', description: 'Enable SDL3 WSI (preferred macOS backend)')
option('native_sdl2',  type : 'feature', value : 'auto', description: 'Enable SDL2 WSI (fallback macOS backend)')
option('native_glfw',  type : 'feature', value : 'auto', description: 'Enable GLFW WSI')
