idl_files = files([
    'native/unknwn.idl',
    'native/dxgiformat.idl',
    'native/dxgicommon.idl',
    'native/dxgitype.idl',
    'native/dxgi.idl',
    'native/dxgi1_2.idl',
    'native/dxgi1_3.idl',
    'native/dxgi1_4.idl',
    'native/d3dcommon.idl',
    'native/d3d10.idl',
    'native/d3d10_1.idl',
    'native/d3d11.idl',
    'native/d3d11_1.idl',
    'native/d3d11sdklayers.idl'
])

com_headers = com_header_generator.process(idl_files)